--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
-    "qunit": "^2.11.0",
-    "qunit-dom": "^0.8.4"
+    "qunit": "^2.11.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
