--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "git+ssh://git@github.com:rohitpaulk/ember-qunit.git#master",
+    "ember-qunit": "git+ssh://git@github.com:rohitpaulk/ember-qunit.git#rohitpaulk/fix-qunit-fixture-position",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.12.0",
     "ember-welcome-page": "^4.0.0",
